pkg/controller/service/testdata/ingress/clusterdomainport/expected.yaml.d/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
  annotations:
    acorn.io/targets: '{"oneimage.app-name.app-namespace.local.oss-acorn.io:8081":{"port":81,"service":"oneimage"}}'
spec:
  rules:
    - host: oneimage.app-name.app-namespace.local.oss-acorn.io
      http:
        paths:
          - backend:
              service:
                name: oneimage
                port:
                  number: 80
            path: /
            pathType: Prefix
