pkg/controller/service/testdata/ingress/clusterdomainport/expected.yaml.d/serviceinstance.yaml
kind: ServiceInstance
apiVersion: internal.acorn.io/v1
metadata:
  name: oneimage
  namespace: app-created-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
spec:
  appName: app-name
  appNamespace: app-namespace
  labels:
    "acorn.io/app-namespace": "app-namespace"
    "acorn.io/app-name": "app-name"
    "acorn.io/container-name": "oneimage"
    "acorn.io/managed": "true"
  container: oneimage
  default: true
  ports:
    - port: 80
      targetPort: 81
      publish: true
      protocol: http
      name: "80"
status:
  conditions:
  - reason: Success
    status: "True"
    success: true
    type: defined
  endpoints:
  - address: oneimage.app-name.app-namespace.local.oss-acorn.io
    publishProtocol: http
  hasService: true
